--- a/GameTemplate/GameTemplate/Game/Game.vcxproj
+++ b/GameTemplate/GameTemplate/Game/Game.vcxproj
@@ -101,6 +101,7 @@
   <ItemGroup>
     <ClCompile Include="character\CharacterController.cpp" />
     <ClCompile Include="Class_of_NewGO.cpp" />
+    <ClCompile Include="Light\DirectionLight.cpp" />
     <ClCompile Include="graphics\GPUBuffer.cpp" />
     <ClCompile Include="graphics\ConstantBuffer.cpp" />
     <ClCompile Include="GameObject\GameObjectManajer.cpp" />
@@ -147,6 +148,7 @@
   <ItemGroup>
     <ClInclude Include="character\CharacterController.h" />
     <ClInclude Include="Class_of_NewGO.h" />
+    <ClInclude Include="Light\DirectionLight.h" />
     <ClInclude Include="graphics\GPUBuffer.h" />
     <ClInclude Include="graphics\ConstantBuffer.h" />
     <ClInclude Include="GameObject\GameObjectManajer.h" />
