--- a/GameTemplate/GameTemplate/Game/Game.vcxproj.filters
+++ b/GameTemplate/GameTemplate/Game/Game.vcxproj.filters
@@ -37,6 +37,9 @@
     <Filter Include="GameObject">
       <UniqueIdentifier>{a139da11-eef3-42ef-9003-5d936422f82f}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Light">
+      <UniqueIdentifier>{d3036711-f459-474c-9f17-dd7c46d4ad76}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="math\Vector.cpp">
@@ -150,6 +153,7 @@
     <ClCompile Include="graphics\GPUBuffer.cpp">
       <Filter>graphics</Filter>
     </ClCompile>
+    <ClCompile Include="Light\DirectionLight.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="math\Vector.h">
@@ -274,6 +278,7 @@
     <ClInclude Include="graphics\GPUBuffer.h">
       <Filter>graphics</Filter>
     </ClInclude>
+    <ClInclude Include="Light\DirectionLight.h" />
   </ItemGroup>
   <ItemGroup>
     <MeshContentTask Include="Assets\modelData\unityChan.fbx">
