--- a/GameTemplate/GameTemplate/Game/Game.vcxproj
+++ b/GameTemplate/GameTemplate/Game/Game.vcxproj
@@ -102,7 +102,6 @@
     <ClCompile Include="character\CharacterController.cpp" />
     <ClCompile Include="Class_of_NewGO.cpp" />
     <ClCompile Include="Light\LightBase.cpp" />
-    <ClCompile Include="Light\DirectionLight.cpp" />
     <ClCompile Include="graphics\GPUBuffer.cpp" />
     <ClCompile Include="graphics\ConstantBuffer.cpp" />
     <ClCompile Include="GameObject\GameObjectManajer.cpp" />
@@ -149,8 +148,8 @@
   <ItemGroup>
     <ClInclude Include="character\CharacterController.h" />
     <ClInclude Include="Class_of_NewGO.h" />
+    <ClInclude Include="Light\Light.h" />
     <ClInclude Include="Light\LightBase.h" />
-    <ClInclude Include="Light\DirectionLight.h" />
     <ClInclude Include="graphics\GPUBuffer.h" />
     <ClInclude Include="graphics\ConstantBuffer.h" />
     <ClInclude Include="GameObject\GameObjectManajer.h" />
@@ -197,6 +196,7 @@
   <ItemGroup>
     <MeshContentTask Include="Assets\modelData\obj.fbx" />
     <MeshContentTask Include="Assets\modelData\stage.fbx" />
+    <MeshContentTask Include="Assets\modelData\StarSparrow.fbx" />
     <MeshContentTask Include="Assets\modelData\unityChan.fbx">
       <ContentOutput Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">$(ProjectDir)\Assets\modelData\%(Filename).cmo</ContentOutput>
       <ContentOutput Condition="'$(Configuration)|$(Platform)'=='Release|x64'">$(ProjectDir)\Assets\modelData\%(Filename).cmo</ContentOutput>
