--- a/GameTemplate/GameTemplate/Game/Game.vcxproj.filters
+++ b/GameTemplate/GameTemplate/Game/Game.vcxproj.filters
@@ -153,9 +153,14 @@
     <ClCompile Include="graphics\GPUBuffer.cpp">
       <Filter>graphics</Filter>
     </ClCompile>
-    <ClCompile Include="Light\LightBase.cpp">
+    <ClCompile Include="bullet.cpp" />
+    <ClCompile Include="Enemy.cpp" />
+    <ClCompile Include="enemybullet.cpp" />
+    <ClCompile Include="Light\LightManager.cpp">
       <Filter>Light</Filter>
     </ClCompile>
+    <ClCompile Include="Light\LightBase.cpp" />
+    <ClCompile Include="Light\CDirectionLight.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="math\Vector.h">
@@ -280,12 +285,15 @@
     <ClInclude Include="graphics\GPUBuffer.h">
       <Filter>graphics</Filter>
     </ClInclude>
-    <ClInclude Include="Light\LightBase.h">
+    <ClInclude Include="bullet.h" />
+    <ClInclude Include="Enemy.h" />
+    <ClInclude Include="enemybullet.h" />
+    <ClInclude Include="Light\LightManager.h">
       <Filter>Light</Filter>
     </ClInclude>
-    <ClInclude Include="Light\Light.h">
-      <Filter>Light</Filter>
-    </ClInclude>
+    <ClInclude Include="Light\LightBase.h" />
+    <ClInclude Include="Light\Light.h" />
+    <ClInclude Include="Light\CDirectionLight.h" />
   </ItemGroup>
   <ItemGroup>
     <MeshContentTask Include="Assets\modelData\unityChan.fbx">
@@ -300,9 +308,17 @@
     <MeshContentTask Include="Assets\modelData\yuka.fbx">
       <Filter>Assets\modelData</Filter>
     </MeshContentTask>
-    <MeshContentTask Include="Assets\modelData\StarSparrow.fbx" />
+    <MeshContentTask Include="Assets\modelData\Enemy.FBX" />
+    <MeshContentTask Include="Assets\modelData\kyutai.FBX">
+      <Filter>Assets\modelData</Filter>
+    </MeshContentTask>
+    <MeshContentTask Include="Assets\modelData\StarSparrow.fbx">
+      <Filter>Assets\modelData</Filter>
+    </MeshContentTask>
   </ItemGroup>
   <ItemGroup>
-    <ImageContentTask Include="Assets\sprite\damage.png" />
+    <ImageContentTask Include="Assets\sprite\damage.png">
+      <Filter>Assets\modelData</Filter>
+    </ImageContentTask>
   </ItemGroup>
 </Project>
