--- a/GameTemplate/GameTemplate/Game/Game.vcxproj
+++ b/GameTemplate/GameTemplate/Game/Game.vcxproj
@@ -100,6 +100,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="bullet.cpp" />
+    <ClCompile Include="Light\CPointLight.cpp" />
     <ClCompile Include="Light\CDirectionLight.cpp" />
     <ClCompile Include="Light\LightBase.cpp" />
     <ClCompile Include="Light\LightManager.cpp" />
@@ -152,6 +153,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="bullet.h" />
+    <ClInclude Include="Light\CPointLight.h" />
     <ClInclude Include="Light\CDirectionLight.h" />
     <ClInclude Include="Light\Light.h" />
     <ClInclude Include="Light\LightBase.h" />
@@ -217,6 +219,9 @@
   </ItemGroup>
   <ItemGroup>
     <ImageContentTask Include="Assets\sprite\damage.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <ImageContentTask Include="Assets\sprite\mato.png" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
