--- a/GameTemplate/GameTemplate/Game/Game.vcxproj
+++ b/GameTemplate/GameTemplate/Game/Game.vcxproj
@@ -100,6 +100,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="bullet.cpp" />
+    <ClCompile Include="Game.cpp" />
     <ClCompile Include="Light\CPointLight.cpp" />
     <ClCompile Include="Light\CDirectionLight.cpp" />
     <ClCompile Include="Light\LightBase.cpp" />
@@ -142,6 +143,8 @@
     <ClCompile Include="graphics\sprite.cpp" />
     <ClCompile Include="graphics\ShaderResourceView.cpp" />
     <ClCompile Include="graphics\Primitive.cpp" />
+    <ClCompile Include="graphics\RenderTarget.cpp" />
+    <ClCompile Include="graphics\ShadowMap.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
@@ -153,6 +156,8 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="bullet.h" />
+    <ClInclude Include="bulletinfo.h" />
+    <ClInclude Include="Game.h" />
     <ClInclude Include="Light\CPointLight.h" />
     <ClInclude Include="Light\CDirectionLight.h" />
     <ClInclude Include="Light\Light.h" />
@@ -199,6 +204,8 @@
     <ClInclude Include="graphics\sprite.h" />
     <ClInclude Include="graphics\ShaderResourceView.h" />
     <ClInclude Include="graphics\Primitive.h" />
+    <ClInclude Include="graphics\RenderTarget.h" />
+    <ClInclude Include="graphics\ShadowMap.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="graphics\StructuredBuffer.h" />
     <ClInclude Include="system\system.h" />
@@ -222,6 +229,9 @@
   </ItemGroup>
   <ItemGroup>
     <ImageContentTask Include="Assets\sprite\mato.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <ImageContentTask Include="Assets\sprite\menue.png" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
