--- a/GameTemplate/GameTemplate/Game/Game.vcxproj.filters
+++ b/GameTemplate/GameTemplate/Game/Game.vcxproj.filters
@@ -172,6 +172,9 @@
     <ClCompile Include="graphics\ShadowMap.cpp" />
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="graphics\sky.cpp" />
+    <ClCompile Include="graphics\Bloom.cpp" />
+    <ClCompile Include="graphics\GaussianBlur.cpp" />
+    <ClCompile Include="graphics\PostEffect.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="math\Vector.h">
@@ -319,6 +322,9 @@
     <ClInclude Include="graphics\ShadowMap.h" />
     <ClInclude Include="Game.h" />
     <ClInclude Include="graphics\sky.h" />
+    <ClInclude Include="graphics\Bloom.h" />
+    <ClInclude Include="graphics\GaussianBlur.h" />
+    <ClInclude Include="graphics\PostEffect.h" />
   </ItemGroup>
   <ItemGroup>
     <MeshContentTask Include="Assets\modelData\unityChan.fbx">
