--- a/GameTemplate/GameTemplate/Game/Game.vcxproj
+++ b/GameTemplate/GameTemplate/Game/Game.vcxproj
@@ -106,6 +106,7 @@
     <ClCompile Include="bullet.cpp" />
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="character\HitObject.cpp" />
+    <ClCompile Include="HPGaugeHUD.cpp" />
     <ClCompile Include="Light\CPointLight.cpp" />
     <ClCompile Include="Light\CDirectionLight.cpp" />
     <ClCompile Include="Light\LightBase.cpp" />
@@ -176,6 +177,7 @@
     <ClInclude Include="graphics\Bloom.h" />
     <ClInclude Include="bullet.h" />
     <ClInclude Include="character\HitObject.h" />
+    <ClInclude Include="HPGaugeHUD.h" />
     <ClInclude Include="missileRechargeHUD.h" />
     <ClInclude Include="ObjectInfo.h" />
     <ClInclude Include="Game.h" />
